# DomoticHome

./: CMakeLists.txt  README.md  README.txt  output.txt  output1.txt  output2.txt
include/: CyclicDevice.h  Device.h  DeviceManager.h  Logger.h  ManualDevice.h  MyTime.h  Time.h  UserInterface.h
src/: CyclicDevice.cpp  Device.cpp  DeviceManager.cpp  Logger.cpp  ManualDevice.cpp  MyTime.cpp  Time.cpp  UserInterface.cpp  main.cpp
